--- a/page-view-time-series-visualizer/time_series_visualizer.ipynb
+++ b/page-view-time-series-visualizer/time_series_visualizer.ipynb
@@ -280,7 +280,7 @@
     "plt.title(\"Daily freeCodeCamp Forum Page Views 5/2016-12/2019\")\n",
     "plt.xlabel(\"Date\")\n",
     "plt.ylabel(\"Page Views\")\n",
-    "plot = plt.plot(df.index, df['value'], color='red', linewidth=1)\n",
+    "plt.plot(df.index, df['value'], color='red', linewidth=1)\n",
     "plt.savefig(\"freeCodeCamp_views.png\")\n",
     "plt.show()"
    ]
